fix overlapping margin

--- a/sass/02_molecule/_m-author-info.scss
+++ b/sass/02_molecule/_m-author-info.scss
@@ -33,6 +33,7 @@
 
 		img {
 			max-width: $author-photo-size;
+			margin-bottom: 0;
 		}
 	}
 }
